# PascheK-Shell

./: Cargo.toml  readme.md
config/: theme.toml
src/: main.rs
src/shell/: config.rs  executor.rs  mod.rs  repl.rs
src/shell/commands/: cd.rs  clear.rs  hello.rs  help.rs  mod.rs  theme.rs
src/shell/prompt/: builder.rs  mod.rs  theme.rs
src/shell/tui/: command_mode.rs  mod.rs  state.rs
src/shell/tui/components/: editor.rs  explorer.rs  files.rs  home.rs  input.rs  logs.rs  mod.rs  status.rs  terminal.rs
