[package]
name = "paschek-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"]}
owo-colors = "4.2.3"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
reedline = "0.43.0"
dirs = "6.0.0" 
ratatui = "0.29.0"
crossterm = "0.29.0"